objects/QualificationDocumentRequirement__c.object
<CustomObject>
    <fields>
        <fullName>DocumentRequirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The document requirement used by this record.</description>
        <inlineHelpText>The document requirement used by this record.</inlineHelpText>
        <label>Document Requirement</label>
        <referenceTo>DocumentRequirement__c</referenceTo>
        <relationshipName>QualificationRequirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DocumentSourceEidGenerated__c</fullName>
        <label>DocumentSourceEidGenerated</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentStatusDate__c</fullName>
        <description>This the date the requirement reaches this status</description>
        <inlineHelpText>This the date the requirement reaches this status</inlineHelpText>
        <label>Document Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DocumentStatusEIDFormula__c</fullName>
        <formula>DocumentStatus__r.DocumentStatusEID__c</formula>
        <label>Document Status EID Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentStatusExternal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The document status as shown to the client, based on documents that are sourced from the employee.</description>
        <inlineHelpText>The document status as shown to the client, based on documents that are sourced from the employee.</inlineHelpText>
        <label>Document Status External</label>
        <referenceTo>DocumentStatus__c</referenceTo>
        <relationshipLabel>Qualification Document Requirements (Document Status External)</relationshipLabel>
        <relationshipName>QualificationDocumentRequirementExternal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DocumentStatusRankSummary__c</fullName>
        <label>Document Status Rank Summary</label>
        <summarizedField>QualificationDocumentStep__c.DocumentStatusRankSummar__c</summarizedField>
        <summaryForeignKey>QualificationDocumentStep__c.QualificationDocumentRequirement__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DocumentStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The status of this document requirement.</description>
        <inlineHelpText>The status of this document requirement.</inlineHelpText>
        <label>Document Status</label>
        <referenceTo>DocumentStatus__c</referenceTo>
        <relationshipLabel>Qualification Document Requirements</relationshipLabel>
        <relationshipName>QualificationDocumentRequirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCQReadinessEIDFormula__c</fullName>
        <formula>ProgramCategoryQualification__r.Readiness__r.QualificationReadinessEID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PCQReadinessEIDFormula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PQPCQIDFormula__c</fullName>
        <formula>IF( ISBLANK(ProgramQualification__c) ,  ProgramCategoryQualification__r.ProgramQualification__c , ProgramQualification__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PQ-PCQ-ID Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramCategoryIDFormula__c</fullName>
        <formula>ProgramCategoryQualification__r.ProgramCategoryPeriod__r.ProgramCategory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProgramCategoryIDFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramCategoryQualification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program category qualification associated with this requirement status</description>
        <inlineHelpText>The program category qualification associated with this requirement status</inlineHelpText>
        <label>Program Category Qualification</label>
        <referenceTo>ProgramCategoryQualification__c</referenceTo>
        <relationshipName>QualificationRequirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramQualificationIdfromPCQFormula__c</fullName>
        <formula>ProgramCategoryQualification__r.ProgramQualification__c</formula>
        <label>ProgramQualificationIdfromPCQFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramQualification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Qualification</label>
        <referenceTo>ProgramQualification__c</referenceTo>
        <relationshipName>QualificationRequirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QualificationDocumentRequirementEID__c</fullName>
        <description>The Enterprise ID for this Qualification Document Requirement record.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Qualification Document Requirement record.</inlineHelpText>
        <label>Qualification Document Requirement EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Qualification Document Requirement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProgramCategoryQualification__c</columns>
        <columns>DocumentStatusDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Qualification Document Requirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualification Document Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>NullCheck</fullName>
        <active>true</active>
        <description>One parent foreign key fields must be null and one must be not null</description>
        <errorConditionFormula>or(
  and( 
    not(
      isblank( ProgramQualification__c )
    ), 
    not( 
      isblank( ProgramCategoryQualification__c )
    )
  ), 
  and( 
    isblank( ProgramQualification__c ),  
    isblank( ProgramCategoryQualification__c )
  )
)</errorConditionFormula>
        <errorMessage>You must supply either a &quot;Program Category Qualification&quot; or a &quot;Program Qualification,&quot; but not both. You see, we can only track one of these at a time.</errorMessage>
    </validationRules>
</CustomObject>